feat(newsletter): adiciona formulario de inscrição no rodapé

--- a/index.html
+++ b/index.html
@@ -138,5 +138,15 @@
         <h3>Contato</h3>
         <p><a href="https://wa.me/5519999708720?text=Ola">WhatsApp</a></p>
     </section>
+
+    <section>
+        <h3>Assine nossa Newsletter</h3>
+        <p>Receba atualizações semanais com novidades DevOps diretamente no seu e-mail.</p>
+        <form>
+            <input type="email" placeholder="Seu e-mail" required style="padding: 0.5rem; width: 250px;">
+            <button type="submit" style="padding: 0.5rem; background-color: #2563eb; color: white; border: none; border-radius: 0.25rem;">Assinar</button>
+        </form>
+    </section>
+
 </body>
 </html>
