fix(articles): corrige acentuação no titulo do artigo de Terraform

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
     <ul>
         <li><a href="article1.html">Compreendendo Pipelines de CI/CD</a></li>
         <li><a href="article2.html">Containerização com Docker</a></li>
-        <li><a href="article3.html">Infraestrutura como codigo com Terraform</a></li>
+        <li><a href="article3.html">Infraestrutura como código com Terraform</a></li>
         <li><a href="article4.html">Monitoração e Logs com ELK Stack</a></li>
     </ul>
     <h3>Ferramentas Populares</h3>
